kubernetes/aws-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-test
  namespace: default
spec:
  serviceAccountName: app-sa
  containers:
    - name: aws-cli
      image: amazon/aws-cli:latest
      command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Never
