kubernetes/calico-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-test-web
  labels:
    app: network-test-web
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: network-test-client
  labels:
    app: network-test-client
spec:
  containers:
    - name: client
      image: curlimages/curl:latest
      command:
        - sleep
        - "3600"
