kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-ingress-web
  namespace: default

spec:
  podSelector:
    matchLabels:
      app: network-test-web

  policyTypes:
    - Ingress
